--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.0.0
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "create-react-app"
+          heroku_app_name: "create-react-app-aboutalib"
           heroku_email: "yasser.aboutalib@edu.devinci.fr"
           usedocker: false
